// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation tests render Navigation in dark mode 1`] = `
<DocumentFragment>
  .c4 {
  height: 2rem;
  width: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  color: #000000;
  font-size: 2rem;
}

.c8 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: medium;
  height: medium;
  margin-right: 0.75rem;
  background-color: transparent;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c8:hover:not(:active,:disabled) {
  background-color: #333;
}

.c8 .material-symbols-sharp {
  color: inherit;
}

.c8:disabled {
  cursor: not-allowed;
}

.c9 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: medium;
  height: medium;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c9:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9:disabled {
  cursor: not-allowed;
}

.c3 {
  margin-right: 0.75rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.5rem;
  width: 2.5rem;
}

.c3 .material-symbols-sharp {
  color: inherit;
}

.c3:hover {
  background-color: #EEEEEE;
}

.c3:active {
  background-color: #E2E2E2;
}

.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(31,31,31,0.6);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
  height: 5rem;
  padding: 0 1.25rem;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 1440px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  background-color: #000000;
}

.c6::before {
  content: "";
  position: absolute;
  bottom: 0.3125rem;
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: #FFFFFF;
}

<nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <button
          class="c3"
        >
          <div
            class="c4"
            data-testid="icon-container"
            size="32"
          >
            <span
              class="c5 material-symbols-sharp"
              color="#000000"
              data-testid="icon"
              size="32"
            >
              menu
            </span>
          </div>
        </button>
        <div
          class="c6"
        />
      </div>
      <div
        class="c7"
      >
        <button
          class="c8"
        >
          Sign In
        </button>
        <button
          class="c9"
        >
          Get Started
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navigation tests renders Navigation correctly 1`] = `
<DocumentFragment>
  .c4 {
  height: 2rem;
  width: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  color: #000000;
  font-size: 2rem;
}

.c8 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  width: medium;
  height: medium;
  margin-right: 0.75rem;
  background-color: transparent;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c8:hover:not(:active,:disabled) {
  background-color: #E2E2E2;
}

.c8 .material-symbols-sharp {
  color: inherit;
}

.c8:disabled {
  cursor: not-allowed;
}

.c9 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: medium;
  height: medium;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c9:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9:disabled {
  cursor: not-allowed;
}

.c3 {
  margin-right: 0.75rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.5rem;
  width: 2.5rem;
}

.c3 .material-symbols-sharp {
  color: inherit;
}

.c3:hover {
  background-color: #EEEEEE;
}

.c3:active {
  background-color: #E2E2E2;
}

.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(238,238,238,0.7);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
  height: 5rem;
  padding: 0 1.25rem;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 1440px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  background-color: #000000;
}

.c6::before {
  content: "";
  position: absolute;
  bottom: 0.3125rem;
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: #FFFFFF;
}

<nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <button
          class="c3"
        >
          <div
            class="c4"
            data-testid="icon-container"
            size="32"
          >
            <span
              class="c5 material-symbols-sharp"
              color="#000000"
              data-testid="icon"
              size="32"
            >
              menu
            </span>
          </div>
        </button>
        <div
          class="c6"
        />
      </div>
      <div
        class="c7"
      >
        <button
          class="c8"
        >
          Sign In
        </button>
        <button
          class="c9"
        >
          Get Started
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
